; ModuleID = '/home/carl/AnghaBench/postgres/contrib/auto_explain/extr_auto_explain.c_explain_ExecutorRun.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/auto_explain/extr_auto_explain.c_explain_ExecutorRun.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nesting_level = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32)* @explain_ExecutorRun to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @explain_ExecutorRun(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* @nesting_level, align 4
  %10 = add nsw i32 %9, 1
  store i32 %10, i32* @nesting_level, align 4
  %11 = call i32 (...) @PG_TRY()
  br i1 true, label %12, label %18

12:                                               ; preds = %4
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @prev_ExecutorRun(i32* %13, i32 %14, i32 %15, i32 %16)
  br label %24

18:                                               ; preds = %4
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @standard_ExecutorRun(i32* %19, i32 %20, i32 %21, i32 %22)
  br label %24

24:                                               ; preds = %18, %12
  %25 = call i32 (...) @PG_FINALLY()
  %26 = load i32, i32* @nesting_level, align 4
  %27 = add nsw i32 %26, -1
  store i32 %27, i32* @nesting_level, align 4
  %28 = call i32 (...) @PG_END_TRY()
  ret void
}

declare dso_local i32 @PG_TRY(...) #1

declare dso_local i32 @prev_ExecutorRun(i32*, i32, i32, i32) #1

declare dso_local i32 @standard_ExecutorRun(i32*, i32, i32, i32) #1

declare dso_local i32 @PG_FINALLY(...) #1

declare dso_local i32 @PG_END_TRY(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
